[gd_scene load_steps=4 format=3 uid="uid://pickup001"]

[ext_resource type="Script" path="res://scripts/pickups/equipment_pickup.gd" id="1_pickup"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pickup"]
radius = 20.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pickup"]
size = Vector2(24, 24)

[node name="EquipmentPickup" type="Area2D"]
collision_layer = 32
collision_mask = 1
script = ExtResource("1_pickup")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_pickup")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pickup")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="GlowEffect" type="PointLight2D" parent="."]
color = Color(0.7, 0.7, 0.7, 1)
energy = 0.5
texture_scale = 0.3
